--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -19,7 +19,7 @@
                     Create User
                 </div>
                 <div class="card-body">
-                    <form id="form">
+                    <form id="form" novalidate>
                         <div class="form-group">
                             <label for="username"> Username</label>
                             <input type="text" class="form-control" id="username" placeholder="Enter Username">
