--- a/OEM Calculator/index.html
+++ b/OEM Calculator/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -26,13 +26,13 @@
                 <form>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" id="name" class="form-control" placeholder="Name">
+                            <input type="text" id="productName" class="form-control" placeholder="Name">
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="text" id="price" class="form-control" placeholder="Price">
+                            <input type="text" id="productPrice" class="form-control" placeholder="Price">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-sm">
+                    <button type="submit" class="btn btn-primary btn-sm addBtn">
                         <i class="fa fa-plus"></i>
                         Add
                     </button>
@@ -52,10 +52,10 @@
             </div>
         </div>
 
-        <div class="card mt-3">
+        <div id ="productCard" class="card mt-3">
             <table class="table">
                 <tbody id="item-list">
-                    <tr>
+                    <!-- <tr>
                         <td>1</td>
                         <td>Monitor</td>
                         <td>300</td>
@@ -64,27 +64,7 @@
                                 <i class="fa fa-edit"></i>
                             </button>
                         </td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Monitor</td>
-                        <td>300</td>
-                        <td class="text-right">
-                            <button type="submit" class="btn btn-warning btn-sm">
-                                <i class="fa fa-edit"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Monitor</td>
-                        <td>300</td>
-                        <td class="text-right">
-                            <button type="submit" class="btn btn-warning btn-sm">
-                                <i class="fa fa-edit"></i>
-                            </button>
-                        </td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
