Add product update, edit and delete

--- a/OEM Calculator/index.html
+++ b/OEM Calculator/index.html
@@ -36,17 +36,17 @@
                         <i class="fa fa-plus"></i>
                         Add
                     </button>
-                    <button type="submit" class="btn btn-warning btn-sm">
+                    <button type="submit" class="btn btn-warning btn-sm updateBtn">
                         <i class="fa fa-edit"></i>
                         Save Changes
                     </button>
-                    <button type="submit" class="btn btn-danger btn-sm">
+                    <button type="submit" class="btn btn-danger btn-sm deleteBtn">
                         <i class="fa fa-times"></i>
                         Delete
                     </button>
-                    <button type="submit" class="btn btn-secondary btn-sm">
+                    <button type="submit" class="btn btn-secondary btn-sm cancelBtn">
                         <i class="fa fa-arror-circle-left"></i>
-                        Add
+                        Cancel
                     </button>
                 </form>
             </div>
@@ -55,16 +55,6 @@
         <div id ="productCard" class="card mt-3">
             <table class="table">
                 <tbody id="item-list">
-                    <!-- <tr>
-                        <td>1</td>
-                        <td>Monitor</td>
-                        <td>300</td>
-                        <td class="text-right">
-                            <button type="submit" class="btn btn-warning btn-sm">
-                                <i class="fa fa-edit"></i>
-                            </button>
-                        </td>
-                    </tr> -->
                 </tbody>
             </table>
         </div>
